<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MenuFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="673dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage1"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/bigmac" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food1"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food1" />

                        <TextView
                            android:id="@+id/descriptionfood1"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood1" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza1"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage2"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/combo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food2"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food2" />

                        <TextView
                            android:id="@+id/descriptionfood2"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood2" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza2"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage3"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/ic_taco" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food3"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food3" />

                        <TextView
                            android:id="@+id/descriptionfood3"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood3" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza3"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage4"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/pizzahit" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food4"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food4" />

                        <TextView
                            android:id="@+id/descriptionfood4"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood4" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza4"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage5"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/cotaco" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food5"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food5" />

                        <TextView
                            android:id="@+id/descriptionfood5"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood5" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza5"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage6"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/ic_action_favorite_24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food6"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food6" />

                        <TextView
                            android:id="@+id/descriptionfood6"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood6" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza6"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/foodimage7"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/sushi" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_food7"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight=" 3"
                            android:text="@string/title_food7" />

                        <TextView
                            android:id="@+id/descriptionfood7"
                            android:layout_width="match_parent"
                            android:layout_height="95dp"
                            android:layout_weight="3"
                            android:text="@string/descriptionfood7" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favfastpizza7"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck,ImageContrastCheck"
                        tools:src="@drawable/ic_action_favorite_24" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>